# hope

./: .gitignore  CMakeLists.txt  LICENSE  build.sh
cmake/: CMakeLists.txt
include/hope/: Config.hpp  Entity.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  SystemsManager.hpp
include/hope/detail/: IdGenerator.hpp  MemoryPool.hpp  MetaUtils.hpp
include/hope/memory/: MemoryPool.hpp
include/hope/utils/: IdGenerator.hpp
src/: Entity.cpp  EntityManager.cpp  System.cpp  SystemManager.cpp  main.cpp
